@@ -216,3 +216,7 @@
 ; Common optional prefix of the keys (aka 'I.Q:' in I.Quest)
 ; Default: empty
 ;key_prefix=
+
+; Name of file containing the logo to be displayed in top left corner
+; Default: empty
+;logo=
